codex-rs/tui/src/onboarding/auth/snapshots/codex_tui__onboarding__auth__github_copilot_tests__github_copilot_device_code_narrow.snap
---
source: tui/src/onboarding/auth/github_copilot_tests.rs
expression: "render(&widget, 44)"
---
  Finish signing in with GitHub Copilot

  1. Open this link in your browser and sign
in

  https://github.com/login/device

  2. Enter this one-time code and authorize
GitHub Copilot

  ABCD-EFGH

  Continue only if you started this login in
Codex. If a website or another person gave
you this code, cancel.

  Press esc to cancel
