codex-rs/tui/src/onboarding/auth/snapshots/codex_tui__onboarding__auth__github_copilot_tests__github_copilot_pending.snap
---
source: tui/src/onboarding/auth/github_copilot_tests.rs
expression: "render(&widget, 80)"
---
  Preparing GitHub Copilot login

  Requesting a one-time code...

  Press esc to cancel
